fix: Fixed content overflow in the chat

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 html, body{
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     margin: 0;
     -webkit-text-size-adjust: 100%;
@@ -158,6 +158,15 @@ button {
     margin-left: auto;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
     transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.msg-container {
+    height: 100%;
+    overflow-y: auto;
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+    padding-bottom: 100px;
 }
 
 .user-msg {
